# autoforge

./: .env.example  .gitignore  LICENSE  README.md  api.py  bootstrap.py  brain.py  cli.py  director.py  engine_brain.py  engine_export.py  engine_extract.py  engine_tournament.py  evolve.py  export.py  ground.py  playbook_ml.py  progress.py  pyproject.toml  run.py  sdk.py  tools.py  tournament.py  utils.py  validate.py
StockTiming/: mission.md  pack.json  playbook.jsonl  retired_topics.json  simulation.py  top_candidates.json  tournament.py
StockTiming/evals/: scenarios.jsonl
commands/: __init__.py  bootstrap.py  cli.py  run_cmd.py  shared.py  tools.py
template/: mission.md  pack.json  simulation.py  tournament.py  world_model.md
template/evals/: scenarios.jsonl
template/prompts/: director.md
template/specialist/: ask.py  predict.py  retrain.py
