[project]
name = "autoforge"
version = "0.1.0"
description = "Autonomous strategy learning via simulation tournament + AI direction"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train-numeric = ["xgboost", "pandas", "numpy"]

[project.scripts]
autoforge = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
