[project]
name = "playbook-ml"
version = "0.1.4"
description = "Describe a decision. Get a deployed specialist. No labeled data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "strategy", "simulation", "optimization", "machine-learning", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
train = [
  "mlx",
  "mlx-lm",
]

[project.urls]
Homepage = "https://github.com/eyoellundberg/playbook-ml"
Documentation = "https://github.com/eyoellundberg/playbook-ml/wiki"
Issues = "https://github.com/eyoellundberg/playbook-ml/issues"

[project.scripts]
playbook-ml = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [".venv", ".env", "*.backup", "**/__pycache__"]
